<resources>
  <string name="app_name">念汝有声小说</string>
  <string name="flower">花千骨</string>
  <string name="not_listen">还未开始收听</string>
  <string name="about">关于</string>
  <string name="large_text">此应用仅为了分享念汝播讲过的小说花千骨与华胥引。
    \n版权属于原作者。
    \n现阶段仅支持在线收听。如果使用3G/4G网络，请注意流量消耗（本人不对消耗的流量负责(*^_^*)）！
  每集大概在10M左右\n本项目已开源至https://github.com/linwoain/Storytelling 有做程序的小伙伴可以一起来
  </string>
  <string name="action_settings">Settings</string>
    <string name="night">夜间模式</string>
    <string name="author">作者</string>
  <string name="linwoain">linwoain</string>
  <string name="q_q">Q Q</string>
  <string name="qq_no">1017368540</string>
  <string name="email">Email</string>
  <string name="email_content">lin@linwoain.com</string>
</resources>
