<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.linwoain.storytelling.AboutActivity"
    tools:showIn="@layout/activity_about">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:autoLink="all"
            android:padding="8dp"
            android:text="@string/large_text"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/author"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/linwoain"
            android:textColor="@color/blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="@+id/guideline" />


        <TextView
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/q_q"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/qq_no"
            android:textColor="@color/blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/linearLayout2"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="80dp"
            tools:layout_conversion_absoluteX="52dp"
            tools:layout_conversion_absoluteY="161dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="48dp"
            tools:layout_conversion_absoluteX="16dp"
            tools:layout_conversion_absoluteY="180dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/email_content"
            android:textColor="@color/blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="108dp"
            tools:layout_conversion_absoluteX="64dp"
            tools:layout_conversion_absoluteY="180dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="66dp" />


    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>
